fixed alignment of results

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -160,7 +160,14 @@ footer p{
     margin-left: 10px;
 }
 
-#result > td, #nearest > td{
+#result > td{
+    font-family: sans-serif;
+    font-size: 16px;
+    color:  black;
+    padding: 5px;
+}
+
+#nearest > td{
     font-family: sans-serif;
     font-size: 16px;
     color:  black;
